# FerrumDB

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ferrum.db  ferrumdb.json
.github/workflows/: ci.yml  publish-python.yml  release-cli.yml  release-node.yml  release-python.yml  rust-ci.yml
benches/: benchmarks.rs
examples/: event_analytics.rs
examples/node-example/: README.md  main.mjs  package.json
examples/python-example/: README.md  main.py
examples/rust-example/: Cargo.toml
examples/rust-example/src/: main.rs
ferrumdb-cli/: Cargo.toml  README.md
ferrumdb-cli/src/: main.rs
ferrumdb-node/: .gitignore  Cargo.toml  README.md  example.mjs  ferrumdb.win32-x64-msvc.node  index.d.ts  index.js  package-lock.json  package.json
ferrumdb-node/__test__/: test.mjs
ferrumdb-node/src/: lib.rs
ferrumdb-python/: Cargo.toml  README.md  example.py  pyproject.toml
ferrumdb-python/src/: lib.rs
ferrumdb-python/tests/: test_ferrumdb.py
src/: cli.rs  error.rs  io.rs  lib.rs  main.rs  metrics.rs  storage.rs  studio.rs
