[package]
name = "ferrumdb"
version = "0.1.0"
edition = "2021"
description = "A terminal-based key-value database written in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rustyline = { version = "15", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
