[package]
name = "ferrumdb"
version = "0.0.1"
edition = "2021"
description = "A premium, high-performance embedded key-value database with TTL and compaction."
license = "MIT"
repository = "https://github.com/MuhammadUsmanGM/FerrumDB"
readme = "README.md"
keywords = ["database", "kv", "storage", "embeddable", "json"]
categories = ["database-implementations", "embedded"]
exclude = ["ferrum.db", "*.tmp"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rustyline = { version = "15", features = ["derive"] }
bincode = "1.3"
aes-gcm = "0.10.3"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3"
