[package]
name = "ferrumdb-python"
version = "0.1.3"
edition = "2021"

[lib]
name = "ferrumdb"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
ferrumdb = { path = ".." }
chrono = "0.4"
