[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferrumdb"
version = "0.1.3"
description = "FerrumDB — Zero-setup embedded document database for Python. No server. No config. Just open a file and go."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Usman", email = "muhammadusmangm@gmail.com" }
]
maintainers = [
    { name = "Muhammad Usman", email = "muhammadusmangm@gmail.com" }
]
keywords = ["database", "embedded", "json", "rust", "key-value", "document-store", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]

[project.urls]
Homepage = "https://github.com/MuhammadUsmanGM/FerrumDB"
Repository = "https://github.com/MuhammadUsmanGM/FerrumDB"
Documentation = "https://github.com/MuhammadUsmanGM/FerrumDB/tree/main/ferrumdb-python"
Changelog = "https://github.com/MuhammadUsmanGM/FerrumDB/releases"

[tool.maturin]
features = ["pyo3/extension-module"]

module-name = "ferrumdb"

